Settings: add Black Theme [2/3]
Change-Id: Idb1032664d61221a89f7c3d6c587a40b021670a3
Signed-off-by: rk134 <rahul.kantrapally@gmail.com>

--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -14,4 +14,8 @@
     <!-- Status bar Icon Manager -->
     <string name="icon_manager_title">Icon manager</string>
     <string name="icon_manager_summary">Control visibility of status bar icons</string>
+
+    <!-- Black theme -->
+    <string name="system_black_theme_title">Turn on black theme</string>
+    <string name="system_black_theme_summary">Forces a pitch-black background</string>
 </resources>
